RESOLVED FIXED127602
WebKit2 View Gestures (Smart Zoom): Can't double-tap zoom-out on the body
https://bugs.webkit.org/show_bug.cgi?id=127602
Summary WebKit2 View Gestures (Smart Zoom): Can't double-tap zoom-out on the body
Tim Horton
Reported 2014-01-24 19:17:26 PST
Steps to Reproduce: 1. Go to nyt.com. 2. Double tap in the very top left corner, in the whitespace. 3. Double tap in the same place again. Expected: 3 should zoom you back out Actual: 3 has no effect <rdar://problem/15852224>
Attachments
patch (3.05 KB, patch)
2014-01-24 19:23 PST, Tim Horton
no flags
Tim Horton
Comment 1 2014-01-24 19:23:53 PST
Created attachment 222186 [details] patch a patch, but I want to figure out if renderRect() should return something smarter for <body>
Tim Horton
Comment 2 2014-01-24 21:44:04 PST
(In reply to comment #1) > Created an attachment (id=222186) [details] > patch > > a patch, but I want to figure out if renderRect() should return something smarter for <body> Filed https://bugs.webkit.org/show_bug.cgi?id=127603 about that oddity.
WebKit Commit Bot
Comment 3 2014-01-24 21:57:00 PST
Comment on attachment 222186 [details] patch Clearing flags on attachment: 222186 Committed r162758: <http://trac.webkit.org/changeset/162758>
WebKit Commit Bot
Comment 4 2014-01-24 21:57:02 PST
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.