WebKit2 View Gestures (Smart Zoom): Can't double-tap zoom-out on the body https://bugs.webkit.org/show_bug.cgi?id=127602

Reviewed by Anders Carlsson.

* UIProcess/mac/ViewGestureController.h:
* UIProcess/mac/ViewGestureController.mm:
(WebKit::ViewGestureController::ViewGestureController):
(WebKit::ViewGestureController::didCollectGeometryForSmartMagnificationGesture):
Use an explicit boolean instead of the emptiness of the renderRect() to determine
whether or not the user has already smart-zoomed. renderRect() can be 0x0
if our hit-test hits the body element.


Canonical link: https://commits.webkit.org/145623@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@162758 268f45cc-cd09-0410-ab3c-d52691b4dbfc